# THOR

./: .gitignore  README.md  pyproject.toml  setup.py  thor_build.py
code/: hamr.py  hamrr.py  image_cut.py  params.in
data/: hlsp_thor_hst_wfc3_acs_bulge_early-release_v1.0_readme.txt  terry_early_release_cat_README.txt
src/hamrr/: hamrr.py  image_cut.py  params.in
src/hamrr/output/: hamrr_ra267.755_dec-29.066_r60.00arcsec.csv
src/thor/: Makefile  collate_thor.src  hst1pass.F  reduce_acs.src  reduce_wfc3.src  thor_go.F  thor_go_gaia.F  thor_go_nogaia.F
src/thor/PSFs/: STDPSF_ACSWFC_F606W_SM4.fits  STDPSF_ACSWFC_F814W.fits  STDPSF_ACSWFC_F814W_SM4.fits  STDPSF_WFC3UV_F606W.fits  STDPSF_WFC3UV_F814W.fits
